--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,16 @@
+:root {
+  --bg-color: #F3EFEC;
+  --text-color: #312A4E;
+  --accent-color: #FFAB6B;
+  --main-font: Raleway;
+  --accent-font: 'STIX Two Text';
+}
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
+}s
 
 .page {
   min-inline-size: 360px;
