--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,10 @@ figure {
   margin: 0;
 }
 
+.header {
+  padding: 10% 0 0 0;
+}
+
 .heading {
   font-family: var(--accent-font, serif);
   text-align: center;
@@ -43,4 +47,14 @@ figure {
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 5vi;
+}
+
+.content__title {
+  font-size: 30px;
+  margin: 7% 0 2.5%;
+}
+
+.header__title {
+  font-size: clamp(3.75rem, 2.5rem + 5.5556vw, 7.5rem);
+  margin: 0 0 40px 0;
 }
