--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,18 @@ figure {
   margin: 7% 0 2.5%;
 }
 
+.content__text-block {
+  font-size: 18px;
+}
+
+.content__paragraph a {
+  color: currentColor;
+}
+
+.content__text-block .content__paragraph:not(:last-child) {
+  padding: 0 0 1.5rem 0;
+}
+
 .header__title {
   font-size: clamp(3.75rem, 2.5rem + 5.5556vw, 7.5rem);
   margin: 0 0 40px 0;
