--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,44 @@ figure {
 }
 
 .content__text-block .content__paragraph:not(:last-child) {
-  padding: 0 0 1.5rem 0;
+  margin: 0 0 1.5em 0;
+}
+
+.content__blockquote {
+  width: 75%;
+  margin: 0 auto 1.5em;
+  font-size: 18px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 200%; /* 36px */
+}
+
+.content__list {
+  list-style: none;
+  padding-inline-start: 30px;
+}
+
+.content__list-item {
+  position: relative;
+  padding: 0 0 0 10px;
+}
+
+.content__list-item:not(:last-child) {
+  margin: 0 0 10px 0;
+}
+
+.content__list-item::before {
+  content: '';
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: 0;
+  left: -15px;
+  background-image: url(../images/marker-light.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
 .header__title {
