feat: add states

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,20 @@ figure {
   margin: 0;
 }
 
+a:focus,
+button:focus {
+  outline: none;
+}
+
+a:focus-visible,
+button:focus-visible {
+  outline: 1px solid currentColor;
+}
+
+button:disabled {
+  pointer-events: none;
+}
+
 .content-section {
   max-width: 1440px;
   margin: 0 auto;
