--- a/styles/style.css
+++ b/styles/style.css
@@ -226,3 +226,14 @@ button:disabled {
   background-color: var(--accent-color);
   z-index: -1;
 }
+
+.footer {
+  border-block-start: 1px solid currentColor;
+  margin-block-start: 10%;
+  padding: 2.5%;
+  text-align: center;
+}
+
+.footer__copyright {
+  font-size: 18px;
+}
